--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Thanh Menu -->
     <header class="main-header">
         <div class="container">
-            <a href="#" class="logo">Vua tìm việc, có ngay job trong ngày hôm nay</a>
+            <a href="#" class="logo"></a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">Trang chủ</a></li>
