--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- đầu -->
     <main class="container">
-        <h1>Danh sách việc làm hấp dẫn</h1>
+        <h1>Việc làm hấp dẫn</h1>
 
         <div class="job-listing-container">
             <!-- job 1 -->
