--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ứng tuyển việc làm</title>
-  <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="image/style.css" />
+  <link rel="icon" href="/image/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="/image/style.css" />
 </head>
 <body>
   <!-- Thanh Menu -->
