--- a/pages/index.html
+++ b/pages/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ứng tuyển việc làm</title>
-  <link rel="icon" href="/image/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="/image/style.css" />
+  <link rel="icon" href="image/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- Thanh Menu -->
   <header class="main-header">
     <div class="container">
@@ -22,10 +23,12 @@
     </div>
   </header>
 
-  <!-- Danh sách việc làm -->
+  <!-- Nội dung chính -->
   <main class="container">
-    <h1>Việc làm hấp dẫn</h1>
-    <div class="job-listing-container" id="job-listing"></div>
+    <h1>🔥 Việc làm hấp dẫn 🔥</h1>
+    <div id="job-list" class="job-listing-container">
+      <p>Đang tải dữ liệu việc làm...</p>
+    </div>
   </main>
 
   <!-- Footer -->
@@ -35,12 +38,12 @@
     </div>
   </footer>
 
-  <!-- Firebase config + load dữ liệu -->
+  <!-- Firebase config -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js";
 
-    // Cấu hình Firebase của bạn
+    // ✅ Cấu hình Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAqy3ZQVragF-GD6Cr8MCoq_KSywsrnKGQ",
       authDomain: "job-website-97920.firebaseapp.com",
@@ -50,48 +53,83 @@
       appId: "1:107059239491:web:228393f257176633c092f6"
     };
 
-    // Khởi tạo Firebase
+    // ✅ Khởi tạo Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+    console.log("✅ Firebase đã kết nối thành công!");
 
-    // Hiển thị danh sách job từ Firestore
+    // ✅ Lấy dữ liệu việc làm từ Firestore
     async function loadJobs() {
-      const container = document.getElementById("job-listing");
-      container.innerHTML = "<p>⏳ Đang tải danh sách việc làm...</p>";
+      const jobList = document.getElementById("job-list");
+      jobList.innerHTML = "<p>Đang tải dữ liệu...</p>";
 
       try {
         const querySnapshot = await getDocs(collection(db, "jobs"));
-        container.innerHTML = "";
-
-        if (querySnapshot.empty) {
-          container.innerHTML = "<p>Không có job nào trong hệ thống 😢</p>";
-          return;
-        }
+        jobList.innerHTML = ""; // Xóa "đang tải..."
 
         querySnapshot.forEach((doc) => {
           const job = doc.data();
           const jobCard = `
             <div class="job-card">
               <h3>${job.title}</h3>
-              <p class="company">${job.company}</p>
-              <div class="details">
-                <span>📍 ${job.location}</span>
-                <span>💰 ${job.salary}</span>
-              </div>
-              <p class="description">${job.description}</p>
-              <a href="#" class="btn-apply">Ứng tuyển ngay</a>
+              <p><b>Công ty:</b> ${job.company}</p>
+              <p><b>Địa điểm:</b> ${job.location}</p>
+              <p><b>Lương:</b> ${job.salary}</p>
+              <p>${job.description}</p>
             </div>
           `;
-          container.innerHTML += jobCard;
+          jobList.innerHTML += jobCard;
         });
 
+        if (jobList.innerHTML === "") {
+          jobList.innerHTML = "<p>Chưa có việc làm nào được đăng!</p>";
+        }
       } catch (error) {
-        console.error("❌ Lỗi khi tải job:", error);
-        container.innerHTML = "<p>Lỗi khi tải dữ liệu 😥</p>";
+        console.error("❌ Lỗi tải dữ liệu:", error);
+        jobList.innerHTML = "<p style='color:red;'>Không thể tải danh sách việc làm!</p>";
       }
     }
 
+    // ✅ Gọi hàm khi trang load
     loadJobs();
   </script>
+
+  <style>
+    /* Một chút CSS cơ bản để nhìn cho đẹp */
+    body {
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      margin: 0;
+      padding: 0;
+    }
+    header, footer {
+      background: #222;
+      color: white;
+      padding: 10px 0;
+      text-align: center;
+    }
+    .container {
+      width: 90%;
+      max-width: 900px;
+      margin: auto;
+    }
+    .job-listing-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .job-card {
+      background: white;
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+    .job-card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+  </style>
 </body>
 </html>
