--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ứng tuyển việc làm</title>
   <link rel="icon" href="image/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/image/style.css">
 </head>
 <body>
 
@@ -94,42 +94,5 @@
     loadJobs();
   </script>
 
-  <style>
-    /* Một chút CSS cơ bản để nhìn cho đẹp */
-    body {
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      margin: 0;
-      padding: 0;
-    }
-    header, footer {
-      background: #222;
-      color: white;
-      padding: 10px 0;
-      text-align: center;
-    }
-    .container {
-      width: 90%;
-      max-width: 900px;
-      margin: auto;
-    }
-    .job-listing-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .job-card {
-      background: white;
-      border-radius: 8px;
-      padding: 15px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: 0.3s;
-    }
-    .job-card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    }
-  </style>
 </body>
 </html>
