--- a/pages/login.html
+++ b/pages/login.html
@@ -8,10 +8,10 @@
   <h2>Đăng nhập</h2>
 
   <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required><br>
-    <input type="password" id="password" placeholder="Mật khẩu" required><br>
-    <button type="submit">Đăng nhập</button>
-  </form>
+  <input type="email" id="email" placeholder="Email" required><br>
+  <input type="password" id="password" placeholder="Mật khẩu" required><br>
+  <button type="submit">Đăng nhập</button>
+</form>
 
   <p>Chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
 
@@ -46,5 +46,6 @@
       }
     });
   </script>
+  <script type="module" src="/js/login.js"></script>
 </body>
 </html>
