--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ứng tuyển việc làm</title>
   <link rel="icon" href="/image/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/image/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
       <a href="#" class="logo"></a>
       <nav class="main-nav">
         <ul>
-          <li><a href="#">Trang chủ</a></li>
-          <li><a href="#">Job thịnh hành</a></li>
-          <li><a href="#">Đăng nhập</a></li>
+          <li><a href="index.html">Trang chủ</a></li>
+          
+          <li><a href="login.html">Đăng nhập</a></li>
         </ul>
       </nav>
     </div>
