--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng nhập</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="center-content">
+  
   <h2>Đăng nhập</h2>
 
   <form id="loginForm">
@@ -12,8 +14,10 @@
   <input type="password" id="password" placeholder="Mật khẩu" required><br>
   <button type="submit">Đăng nhập</button>
 </form>
-
-  <p>Chưa có tài khoản? <a href="register.html">Đăng ký</a></p>
+<div class="auth-text">
+  <p>Chưa có tài khoản?</p>
+     <a href="register.html">Đăng ký</a>
+  <p><a href="/pages/index.html">⬅ Quay về trang chủ</a></p>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
