--- a/pages/register.html
+++ b/pages/register.html
@@ -11,10 +11,27 @@
   <h1>Đăng ký tài khoản</h1>
 
   <form id="registerForm">
-    <input type="text" id="name" placeholder="Họ tên" required><br>
-    <input type="email" id="email" placeholder="Email" required><br>
-    <input type="password" id="password" placeholder="Mật khẩu" required><br>
-    <button type="submit">Đăng ký</button>
+      <label for="role">Bạn là</label>
+  <select id="role" required>
+    <option value="">-- Chọn loại tài khoản --</option>
+    <option value="candidate">Ứng viên</option>
+    <option value="employer">Nhà tuyển dụng</option>
+  </select>
+  <br
+  <label for="fullname">Họ và tên</label>
+  <input type="text" id="fullname" required>
+
+  <label for="phone">Số điện thoại</label>
+  <input type="tel" id="phone" required>
+
+  <label for="email">Email</label>
+  <input type="email" id="email" required>
+
+  <label for="password">Mật khẩu</label>
+  <input type="password" id="password" required>
+
+
+  <button type="submit">Đăng ký</button>
   </form>
     <div class="auth-text">
       <p>Đã có tài khoản?</p>
