--- a/register.html
+++ b/register.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng ký tài khoản</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body class="center-content">
   
