--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
     <div class="auth-text">
       <p>Đã có tài khoản?</p>
       <a href="login.html">Đăng nhập</a>
-      <p><a href="/pages/index.html">⬅ Quay về trang chủ</a></p>
+      <p><a href="index.html">⬅ Quay về trang chủ</a></p>
     </div>
 
   <script type="module">
