--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <div class="auth-text">
   <p>Chưa có tài khoản?</p>
      <a href="register.html">Đăng ký</a>
-  <p><a href="/pages/index.html">⬅ Quay về trang chủ</a></p>
+  <p><a href="index.html">⬅ Quay về trang chủ</a></p>
 
   <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
